2007-01-31  John W. Eaton  <jwe@octave.org>

	* image/image.m: Don't call drawnow.

	* plot/__gnuplot_version__.m: Restore from CVS Attic.
	* plot/Makefile.in (SOURCES_M): Add it to the list.

	* plot/__uiobject_draw_axes__.m: Delete useless call to
	__gnuplot_save_data__.

	* image/image.m: Accept 2 args, but ignore the second for now.

2007-01-30  David Bateman  <dbateman@free.fr>

	* pkg/pkg.m (pkg, isautoload, install, load_packages): Add ability
	to flag a package as to be autoloaded. Add install flags -noauto, 
	-auto to force autoload behavior.
	(installed_packages): Make list of installed packages unique.

2007-01-30  John W. Eaton  <jwe@octave.org>

	* Merge of changes from graphics-branch:

	2007-01-29  John W. Eaton  <jwe@octave.org>

	* plot/subplot.m: Set nextplot property of current figure to "add".

	* plot/__uiobject_draw_axes__.m: Only handle outerposition
	property if it exists.

	2007-01-26  John W. Eaton  <jwe@octave.org>

	* plot/__uiobject_draw_axes__.m: Move initialization of max and
	min values outside of loop over child objects.

	* plot/contour.m, plot/contourc.m: New files.
	* plot/Makefile.in (SOURCES_M): Add them to the list.

	* image/image_viewer.m: Set view_fcn to "gnuplot_internal" if we
	find a gnuplot version newer than 4.0.
	* image/__img_gnuplot__.m: Delete.
	* image/image.m: Create image graphics object.
	Call newplot to setup and drawnow to finish.
	Eliminate ZOOM arg.

	* plot/__uiobject_draw_axes__.m: Handle image data.

	* plot/legend.m: Eliminate useless variable "warned".

	* plot/__uiobject_image_ctor__.m: New file.
	* plot/Makefile.in (SOURCES_M): Add it to the list.

	* plot/gcf.m: Also create new figure if currentfigure is 0.
	* plot/drawnow.m: Use get (0, "currentfigure") instead of gcf.

	* plot/__uiobject_root_figure_ctor__.m: Set visible property.

	* plot/__default_colormap__.m: New file.
	* plot/Makefile.in (SOURCES_M): Add it to the list.
	* plot/__uiobject_figure_ctor__.m: Use it to set default colormap